fixed dark mode lines

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -727,9 +727,14 @@ body.dark-theme .fc .fc-toolbar-title {
 
 }
 
-body.dark-theme .fc .fc-timegrid-col.fc-day-today {
+body.dark-theme .fc .fc-timegrid-col .fc-day-today {
   background-color: #00668332 !important;
   z-index: 1000;
+}
+
+body.dark-theme .fc-timegrid-col-frame {
+  border-left: solid 0.01px #444444 !important;
+  z-index: 1000
 }
 
 body.dark-theme .fc-header-toolbar {
